style and logic update

--- a/index.html
+++ b/index.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissor</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rock Paper Scissors</title>
+
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-    
-    <h1>Rock Paper Scissor</h1>
+
+  <button id="themeToggle">🌙</button>
+
+  <div class="game">
+    <h1>Rock Paper Scissors</h1>
+
     <div class="choices">
-        <div class="choice" id="paper">
-            <img src="./images/paper.png" alt="">
-        </div>
-        <div class="choice" id="rock">
-            <img src="./images/rock.png" alt="">
-        </div>
-        <div class="choice" id="scissor">
-            <img src="./images/scissor.png" alt="">
-        </div>
+      <button class="choice" data-choice="rock">
+        <img src="images/rock.png" alt="Rock">
+      </button>
+      <button class="choice" data-choice="paper">
+        <img src="images/paper.png" alt="Paper">
+      </button>
+      <button class="choice" data-choice="scissor">
+        <img src="images/scissor.png" alt="Scissor">
+      </button>
     </div>
 
     <div class="score-board">
-        <div class="score">
-            <p id="user-score">0</p>
-            <p>You</p>
-        </div>
-        <div class="score">
-            <p id="comp-score">0</p>
-            <p>Computer</p>
-        </div>
+      <div>
+        <p id="user-score">0</p>
+        <span>You</span>
+      </div>
+      <div>
+        <p id="comp-score">0</p>
+        <span>Computer</span>
+      </div>
     </div>
 
-    <div class="msg-container">
-        <div id="msg">Play Your Move</div>
-    </div>
+    <div class="message" id="msg">Make your move</div>
 
-    <div id="reset" class="hide">
-        <div id="reset-msg" >Reset</div>
-    </div>
+    <button id="reset">Reset Game</button>
+  </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/tsparticles-confetti@2.11.0/tsparticles.confetti.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
-    <script src="javascript.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
